# xco

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  sample_code.py
.github/workflows/: build_and_test.yml  build_test_release.yml
dev_scripts/: dev_script_01.py  dev_script_02.py
src/xeno_canto_organizer/: xco.py
test_data/: summary_of_data.pkl
tests/: test_basic.py  test_process.py  test_unit.py
