[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
      
[tool.setuptools.packages.find]
where = ["src"]  
include = ["xeno_canto_organizer*"]  

[project]
name = "xeno_canto_organizer" 
version = "v0.10.1"
dependencies = [
  "scipy>=1.15",
  "pillow>=11.1",
  "pandas>=2.2",
  "requests>=2.32",
  "Unidecode>=1.3",
  "matplotlib>=3.10",
]

authors = [
  { name="Serge Zaugg" },
]
description = "A Python toolkit to prepare Xeno-Canto bio-acoustic audio files for machine learning projects"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

